# mirabel_rs

./: Cargo.toml  README.md  build.rs
.github/workflows/: test.yml
example/: Cargo.toml  test_surena.sh
example/src/: frontend.rs  game.rs  lib.rs
src/: frontend.rs  lib.rs  sdl_event.rs
src/base/: error.rs  event.rs  game_init.rs  log.rs  mod.rs  ptr_vec.rs  string.rs
src/gui/: frontend.rs  imgui.rs  mod.rs  sdl_event.rs  skia_helper.rs
src/surena/: game.rs  mod.rs
