[workspace]
members = [".", "example"]
default-members = [".", "example"]

[package]
name = "mirabel"
version = "0.1.0"
authors = ["vilaureu"]
edition = "2021"
publish = false

[features]
default = ["frontend", "skia"]
frontend = []
skia = ["skia-safe", "gl_generator", "frontend"]

[dependencies.mirabel_sys]
git = "https://github.com/vilaureu/mirabel_sys"
rev = "f2acf8e58d7dcff5ef8889ce3c9283b6c7a4fb08"

[dependencies.skia-safe]
version = "0.57"
features = ["gl", "x11"]
optional = true

[build-dependencies.gl_generator]
version = "0.14.0"
optional = true

# Optionally, the release build can be optimized.
[profile.release]
# Unwinding which reaches an FFI boundary falls back to abort anyway.
panic = "abort"
# Perform LTO to achieve better optimization.
lto = "thin"
# Strip symbols from created library to save space.
strip = true
