[workspace]
members = [".", "example"]
default-members = [".", "example"]

[package]
name = "mirabel"
version = "0.1.0"
authors = ["vilaureu"]
edition = "2021"
publish = false
build = "build/main.rs"

[features]
default = ["mirabel", "skia"]
mirabel = []
skia = ["skia-safe", "gl_generator", "mirabel"]

[dependencies.skia-safe]
version = "0.60"
features = ["gl", "x11"]
optional = true

[build-dependencies.bindgen]
version = "0.64"

[build-dependencies.regex]
version = "1.6"
default-features = false
features = ["std", "perf"]

[build-dependencies.gl_generator]
version = "0.14.0"
optional = true

# Optionally, the release build can be optimized.
[profile.release]
# Unwinding which reaches an FFI boundary falls back to abort anyway.
panic = "abort"
# Perform LTO to achieve better optimization.
lto = "thin"
# Strip symbols from created library to save space.
strip = true
